%% Build and check from R:
%% news(db = tools:::.build_news_db_from_package_NEWS_Rd("<Matrix>/inst/NEWS.Rd"))
\name{NEWS}
\title{News for \R{} Package \pkg{Matrix}}
\encoding{UTF-8}
%% NB: The date (yyyy-mm-dd) is the "Packaged: " date in ../DESCRIPTION
\section{Changes in version 1.6-5 (2023-12-05 r4530)}{
  \subsection{Significant User-Visible Changes}{
    \itemize{
      \item .
    }
  }
  \subsection{New Features}{
    \itemize{
      \item .
    }
  }
  \subsection{Bug Fixes}{
    \itemize{
      \item \code{x[]} works for \code{x} inheriting from virtual class
      \code{sparseVector}.
    }
  }
  \subsection{Misc}{
    \itemize{
      \item \code{\%||\%} is defined in the \pkg{Matrix} namespace
      only for \R{} versions less than 4.4.0.
    }
  }
}

\section{Changes in version 1.6-4 (2023-11-29 r4523)}{
  \subsection{Bug Fixes}{
    \itemize{
      \item \code{printf} format mismatches detected by R-devel
      are fixed in 3 \file{src/*.c}.
      \item better deprecation message for \code{..2dge()}.
    }
  }
  \subsection{Misc}{
    \itemize{
      \item Entry point \code{M_chm_triplet_to_SEXP}, removed
      in \pkg{Matrix} version 1.6-2, is restored (as a macro).
      It was \dQuote{covertly} used by package \pkg{Rmosek}.
    }
  }
}

\section{Changes in version 1.6-3 (2023-11-13 r4513)}{
  \subsection{Misc}{
    \itemize{
      \item With an \R built with \command{configure} option
      \option{--disable-long-double}, \code{prod(M)} now very slightly
      differs for two differently classed versions of \code{M}.

      \item \code{checkMatrix()} from \file{test-tools-Matrix.R} gets
      optional \code{MSG} argument for suppressing \code{prod()} differences.
    }
  }
}

\section{Changes in version 1.6-2 (2023-11-05 r4503)}{
  \subsection{Significant User-Visible Changes}{
    \itemize{
      \item Methods for generic functions \code{rbind2}, \code{cbind2},
      \code{\%*\%}, \code{\%&\%}, \code{crossprod}, and \code{tcrossprod}